--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
     </a>
 
     <nav>
-      <ul class="main-nav hidden">
+      <ul class="hidden-mobile" id="main-nav">
         {% if page.url == '/' %}
         <li class="active"><a href="{{ site.baseurl }}/">Home</a></li>
         {% else %}
