--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,15 +5,13 @@ $color-bg-dark:          #2e3440;
 $color-bg-dark-bright:   #434953;
 $color-footer:           #1c1f26;
 $color-highlight:        #bef41a;
-$color-gradient-start:   #d9ff42;
-$color-gradient-end:     #cbef3e;
 $color-text:             $white;
 $color-blue:             #25b7d3;
 $color-code-pre:         #636870;
 
 // - - - - - - - - - - - - - FONTS - - - - - - - - - - - - - //
 
-$base-font-family: "Work Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+$base-font-family: "Work Sans", sans-serif;
 $base-font-size:   16px;
 $base-font-weight: 400;
 
