--- a/css/main.scss
+++ b/css/main.scss
@@ -36,6 +36,7 @@
 				position: fixed;
 				margin: 0;
 				padding: 0;
+				padding-top: 15px;
 				top: $height-navbar;
 				left: 0;
 				right: 0;
@@ -51,6 +52,9 @@
 				a {
 					display: block;
 					padding: $mobile-menu-item-padding 40px;
+					@media (max-height: 480px) {
+						padding: 0.8*$mobile-menu-item-padding 40px;
+					}
 					transition: all $transition-time-standard ease-in-out;
 					color: $white;
 					&:hover:not(.no-link) {
@@ -73,6 +77,9 @@
 					padding-bottom: 0!important;
 					li a {
 						padding: $mobile-menu-item-padding 60px!important;
+						@media (max-height: 480px) {
+							padding: 0.8*$mobile-menu-item-padding 60px!important;
+						}
 					}
 				}
 			}
@@ -170,11 +177,27 @@
 .fw-logo {
 	padding: 10px 0;
 	margin-left: 44px;
+	font-size: 28px;
+	@media (max-width: $toast-breakpoint-small) {
+		margin-left: 10px;
+	}
+	@media (max-width: 320px) {
+		font-size: 14px;
+	}
+	@media (min-width: 321px) and (max-width: 450px) {
+		font-size: 16px;
+	}
+	@media (min-width: 451px) and (max-width: 550px) {
+		font-size: 21px;
+	}
+	@media (min-width: 551px) and (max-width: 600px) {
+		font-size: 25px;
+	}
 	.title {
 		margin: 0;
-		font-size: 5rem;
-		letter-spacing: -0.25rem;
-		line-height: 2.75rem;
+		font-size: 2.8em;
+		letter-spacing: -0.05em;
+		line-height: 0.6em;
 		text-transform: lowercase;
 		.first {
 			font-weight: 300;
@@ -189,9 +212,8 @@
 	}
 	.subtitle {
 		margin: 0;
-		font-size: 2.33rem;
+		font-size: 1.3em;
 		font-weight: 300;
-		line-height: 3rem;
 		text-transform: lowercase;
 		.green {
 			color: $color-highlight;
@@ -207,6 +229,10 @@
 		padding-top: 128px;
 		height: 450px;
 		overflow: hidden;
+		@media (max-width: 450px) {
+			padding-top: 80px;
+			height: 300px;
+		}
 	}
 	&#home, &#thanks {
 		.container {
@@ -299,7 +325,7 @@ footer {
 		}
 		li {
 			@media (max-width: $toast-breakpoint-medium) {
-				padding: 6px 0;
+				padding: 14px 0;
 			}
 			@media (min-width: $toast-breakpoint-medium) {
 				float: right;
@@ -368,6 +394,10 @@ section.code-separator {
   box-shadow: 0px 7px 23px 0px rgba(52, 52, 52, 0.4);
   z-index: 100;
 	color: $color-bg-dark;
+	@media (min-width: 550px) and (max-width: $toast-breakpoint-medium) {
+		width: 75%;
+		margin: 0 auto;
+	}
 	@media (max-width: $toast-breakpoint-medium) {
 		margin-bottom: 75px;
 		&.last {
