added apps tools with icons

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -46,6 +46,8 @@ body {
   color: $color-text;
 
   padding-top: $height-navbar; // sticky navbar
+
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -104,6 +106,10 @@ a {
 
 .visible {
   opacity: 1!important;
+}
+
+.no-overflow {
+  overflow: hidden!important;
 }
 
 // - - - - - - - - - - - GLOBAL LAYOUT - - - - - - - - - - - //
