--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,7 +12,25 @@
     </div>
   </div>
 </footer>
+
 <script src="{{ "/js/app.min.js" | prepend: site.baseurl }}"></script>
+
+{% if page.url == "/" %}
+<script src="{{ "/js/masterslider.min.js" | prepend: site.baseurl }}"></script>
+<script type="text/javascript">
+  var slider = new MasterSlider();
+  slider.control('arrows');
+  slider.setup('masterslider' , {
+    width:800,
+    height:350,
+    space:0,
+    loop:true,
+    view:'flow',
+    layout:'partialview'
+  });
+</script>
+{% endif %}
+
 {{ if site.google_analytics }}
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
