--- a/_includes/refslider.html
+++ b/_includes/refslider.html
@@ -1,4 +1,4 @@
-<div class="ms-caro3d-template">
+<div class="ms-caro3d-template ms-caro3d-wave">
   <!-- masterslider -->
   <div class="master-slider ms-skin-default" id="masterslider">
     {% for ref in site.references limit:5 %}
