--- a/css/main.scss
+++ b/css/main.scss
@@ -512,46 +512,10 @@ section.code-separator {
 			}
 		}
 	}
-	.slider {
-		$slider-height: 375px;
-		@extend %clearfix;
-		padding: 0;
-		margin: 0;
-		margin-top: 50px;
-		position: relative;
-		height: $slider-height;
-		li {
-			list-style: none;
-			width: 600px;
-			height: $slider-height;
-			display: block;
-			background-color: $white;
-		  border-top-right-radius: $border-radius-card;
-			border-top-left-radius: $border-radius-card;
-		  box-shadow: 0px 8px 40px 0px rgba(52, 52, 52, 0.75);
-			overflow: hidden;
-			position: absolute;
-			img {
-				width: 100%;
-				height: auto;
-			}
-			&.active {
-				left: 50%;
-				margin-left: -300px;
-				z-index: 250;
-			}
-			&:not(.active) {
-				transform: scale(0.9);
-				top: 19px;
-				z-index: 200;
-				&.left {
-					left: -30px;
-				}
-				&.right {
-					right: -30px;
-				}
-			}
-		}
+	.ms-caro3d-template .ms-slide-bgcont {
+	  box-shadow: 0px 8px 40px 0px rgba(52, 52, 52, 0.75);
+		border-top-right-radius: $border-radius-card;
+		border-top-left-radius: $border-radius-card;
 	}
 }
 
