--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <a href="{{ site.baseurl }}/" class="logo" title="Startseite">
-      <img src="{{ site.baseurl }}/images/logo.svg" alt="Terminal">
+      <img src="{{ site.baseurl }}/images/logo.svg" alt="{{ site.title }}" data-no-retina>
     </a>
 
     <nav>
