--- a/_includes/refslider.html
+++ b/_includes/refslider.html
@@ -1,9 +1,15 @@
-<div class="ms-caro3d-template ms-caro3d-wave">
+<ul class="slider-nav">
+  <li data-target-slide="0"></li>
+  <li data-target-slide="1"></li>
+  <li data-target-slide="2"></li>
+</ul>
+<div class="ms-partialview-template" id="partial-view-1">
   <!-- masterslider -->
   <div class="master-slider ms-skin-default" id="masterslider">
-    {% for ref in site.references limit:5 %}
-    <div class="ms-slide">
-      <img src="{{ ref.image | prepend: "../../images/refs/" }}" data-src="{{ ref.image | prepend: "../../images/refs/" }}" alt="{{ ref.title }}"/>
+    {% assign slider_refs = site.references | where: "group", "slider" | sort: "slider_order" %}
+    {% for ref in slider_refs limit:3 %}
+    <div class="ms-slide" data-delay="7">
+      <img src="{{ ref.image_slider | prepend: "../../images/refs/" }}" alt="{{ ref.title }}"/>
     </div>
     {% endfor %}
   </div>
