--- a/css/main.scss
+++ b/css/main.scss
@@ -493,6 +493,7 @@ section.code-separator {
 		@extend %clearfix;
 		padding: 0;
 		margin: 0;
+		margin-bottom: 40px;
 		display: inline-block;
 		li {
 			display: block;
@@ -512,7 +513,10 @@ section.code-separator {
 			}
 		}
 	}
-	.ms-caro3d-template .ms-slide-bgcont {
+	.ms-partialview-template {
+		height: 448px;
+	}
+	.ms-slide-bgcont {
 	  box-shadow: 0px 8px 40px 0px rgba(52, 52, 52, 0.75);
 		border-top-right-radius: $border-radius-card;
 		border-top-left-radius: $border-radius-card;
