--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,7 +1,7 @@
 <section class="dark-bg" id="kontakt">
   <div class="container">
     <h3><span class="bold white">sagen</span>sie<span>hallo</span></h3>
-    <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et.</p>
+    <p>Sie suchen einen <strong>Designer</strong>, <strong>Web-Entwickler</strong> oder <strong>Apple Developer</strong>? Dann sind Sie bei mir genau richtig!</p>
     <form method="POST" id="contactform">
 
       <input type="text" name="_gotcha" style="display:none">
