--- a/css/main.scss
+++ b/css/main.scss
@@ -521,7 +521,7 @@ section.code-separator {
 		}
 	}
 	.ms-partialview-template {
-		height: 448px;
+		max-height: 448px;
 	}
 	.ms-slide-bgcont {
 	  box-shadow: 0px 8px 40px 0px rgba(52, 52, 52, 0.75);
@@ -624,9 +624,6 @@ section.code-separator {
 		$distance-bottom: 10px;
 		height: $collection-item-height + 2 * $distance-bottom;
 		padding: $distance-bottom 15px;
-		@media (max-width: $toast-breakpoint-medium) {
-			width: 100%;
-		}
 		.collection-item-content {
 			@extend %clearfix;
 			min-height: 100%;
@@ -685,6 +682,9 @@ section.code-separator {
 				text-transform: uppercase;
 				margin: 0;
 				padding-top: 19px;
+				@media (min-width: 961px) and (max-width: 1100px) {
+					padding-top: 10px;
+				}
 				font-weight: 500;
 			}
 			h4 {
@@ -705,6 +705,33 @@ section.code-separator {
 				&:hover {
 					background-color: $color-highlight;
 					color: $color-bg-dark;
+				}
+			}
+		}
+		@media (max-width: 960px) {
+			width: 100%;
+		}
+		@media (max-width: 540px) {
+			margin-top: 50px;
+			overflow: visible;
+			height: auto;
+			.collection-item-content {
+				overflow: visible;
+				border-top-left-radius: $border-radius-card;
+				border-bottom-left-radius: $border-radius-card;
+				padding: 10px 15px;
+				.collection-icon-wrapper {
+					float: right;
+					margin-right: 10px;
+					margin-top: -66px;
+					transform: scale(0.9);
+				}
+				h5 {
+					padding-top: 0px;
+				}
+				a {
+					display: block;
+					padding: 1px 0;
 				}
 			}
 		}
