text fixes, new slider

--- a/_includes/refslider.html
+++ b/_includes/refslider.html
@@ -3,7 +3,7 @@
   <li data-target-slide="1"></li>
   <li data-target-slide="2"></li>
 </ul>
-<div class="ms-partialview-template" id="partial-view-1">
+<div class="ms-caro3d-template ms-caro3d-wave">
   <!-- masterslider -->
   <div class="master-slider ms-skin-default" id="masterslider">
     {% assign slider_refs = site.references | where: "group", "slider" | sort: "slider_order" %}
