--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -210,4 +210,8 @@ input, textarea {
     background-color: $white;
     color: $color-bg-dark;
   }
+  &:hover:not(:focus) {
+    background-color: $color-highlight;
+    color: $color-bg-dark;
+  }
 }
