--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,7 @@
 	height: $height-navbar;
 	background-color: $white;
 	background-color: rgba(255, 255, 255, 0.95);
+	backdrop-filter: blur(4px);
 	z-index: 999;
 	position: fixed;
 	top: 0;
