--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
       </ul>
     </div>
     <div class="copyright">
-      <p>&copy; 2016 Florian Weich. Alle Rechte vorbehalten.</p>
+      <p>&copy; Florian Weich. Alle Rechte vorbehalten.</p>
     </div>
   </div>
 </footer>
@@ -18,16 +18,3 @@
 {% if page.url == "/" %}
 <script src="{{ "/js/masterslider.min.js" | prepend: site.baseurl }}"></script>
 {% endif %}
-
-{{ if site.google_analytics }}
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', '{{ site.google_analytics }}', 'auto');
-  ga('send', 'pageview');
-
-</script>
-{{ endif }}
