--- a/css/main.scss
+++ b/css/main.scss
@@ -945,7 +945,10 @@ section.code-separator {
 	@include retina {
 		background-image: url({{ "../images/florianweich_profile@2x.jpg" | prepend: site.baseurl }});
 	};
-	height: 300px;
+	height: calc(100% - 100px);
+	@media (max-width: 799px) {
+		height: 300px;
+	}
 	background-size: cover;
 	background-position: center top;
 	border-bottom-left-radius: $border-radius-card;
