Updated Datenschutzerklärung to conform with DSGVO

--- a/css/main.scss
+++ b/css/main.scss
@@ -1032,9 +1032,15 @@ section.code-separator {
 		}
 	}
 	h4 {
-		font-size: 1.25em;
+		font-size: 1.4em;
 		font-weight: 500;
 		text-align: left;
+		color: $color-highlight;
+	}
+	h5 {
+		font-size: 1.1em;
+		font-weight: 500;
+		color: $color-highlight;
 	}
 	ul {
 		list-style-type: square;
