--- a/css/main.scss
+++ b/css/main.scss
@@ -4,7 +4,7 @@
 
 // - - - - - - - - - - - - - IMPORTS - - - - - - - - - - - - - //
 
-@import "variables", "grid", "base";
+@import "fonts", "variables", "grid", "base";
 
 // - - - - - - - - - - - - NAVIGATION - - - - - - - - - - - - //
 
