--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,28 +7,41 @@
   <title>{% if page.title %}{{ page.title | escape }} | {{ site.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
 
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ "/images/favicons/apple-touch-icon-57x57.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ "/images/favicons/apple-touch-icon-60x60.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ "/images/favicons/apple-touch-icon-72x72.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ "/images/favicons/apple-touch-icon-76x76.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ "/images/favicons/apple-touch-icon-114x114.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ "/images/favicons/apple-touch-icon-120x120.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ "/images/favicons/apple-touch-icon-144x144.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ "/images/favicons/apple-touch-icon-152x152.png" | prepend: site.baseurl }}">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ "/images/favicons/apple-touch-icon-180x180.png" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ "/images/favicons/favicon-32x32.png" sizes="32x32" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ "/images/favicons/android-chrome-192x192.png" sizes="192x192" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ "/images/favicons/favicon-96x96.png" sizes="96x96" | prepend: site.baseurl }}">
-  <link rel="icon" type="image/png" href="{{ "/images/favicons/favicon-16x16.png" sizes="16x16" | prepend: site.baseurl }}">
-  <link rel="manifest" href="{{ "/images/favicons/manifest.json" | prepend: site.baseurl }}">
-  <link rel="mask-icon" href="{{ "/images/favicons/safari-pinned-tab.svg" | prepend: site.baseurl }}" color="#5bbad5">
-  <link rel="shortcut icon" href="{{ "/images/favicons/favicon.ico" | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ " /images/favicons/apple-touch-icon-57x57.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ " /images/favicons/apple-touch-icon-60x60.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ " /images/favicons/apple-touch-icon-72x72.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ " /images/favicons/apple-touch-icon-76x76.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ " /images/favicons/apple-touch-icon-114x114.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ " /images/favicons/apple-touch-icon-120x120.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ " /images/favicons/apple-touch-icon-144x144.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ " /images/favicons/apple-touch-icon-152x152.png
+    " | prepend: site.baseurl }}">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ " /images/favicons/apple-touch-icon-180x180.png
+    " | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ " /images/favicons/favicon-32x32.png " sizes="32x32
+    " | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ " /images/favicons/android-chrome-192x192.png " sizes="192x192
+    " | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ " /images/favicons/favicon-96x96.png " sizes="96x96
+    " | prepend: site.baseurl }}">
+  <link rel="icon" type="image/png" href="{{ " /images/favicons/favicon-16x16.png " sizes="16x16
+    " | prepend: site.baseurl }}">
+  <link rel="manifest" href="{{ " /images/favicons/manifest.json " | prepend: site.baseurl }}">
+  <link rel="mask-icon" href="{{ " /images/favicons/safari-pinned-tab.svg " | prepend: site.baseurl }}" color="#5bbad5">
+  <link rel="shortcut icon" href="{{ " /images/favicons/favicon.ico " | prepend: site.baseurl }}">
   <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="msapplication-TileImage" content="{{ "/images/favicons/mstile-144x144.png" | prepend: site.baseurl }}">
-  <meta name="msapplication-config" content="{{ "/images/favicons/browserconfig.xml" | prepend: site.baseurl }}">
+  <meta name="msapplication-TileImage" content="{{ " /images/favicons/mstile-144x144.png " | prepend: site.baseurl }}">
+  <meta name="msapplication-config" content="{{ " /images/favicons/browserconfig.xml " | prepend: site.baseurl }}">
   <meta name="theme-color" content="#ffffff">
 
-  <link rel="stylesheet" href="{{ "/css/vendor.css" | prepend: site.baseurl }}">
-  <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
+  <link rel="stylesheet" href='{{ "/css/vendor.css" | prepend: site.baseurl | append: "?" | append: site.version }}'>
+  <link rel="stylesheet" href='{{ "/css/main.css" | prepend: site.baseurl | append: "?" | append: site.version }}'>
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
 </head>
